some Functionality update .

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -28,7 +28,7 @@
                         <a href="#">Account</a>
                         <div class="dropdown-content">
                             <!-- <a href="#" id="uname">Name</a> -->
-                            <a href="./page/signup.html" id="signup">signup</a>
+                            <a href="./page/signup.html" id="signup" functionashish()>signup</a>
                             <a href="#" id="logout">Logout</a>
                         </div>
                     </li>
